--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,4 +1,9 @@
 development:
   adapter: sqlite3
-  database: ./db/sqlite/quiz
+  database: ./db/sqlite/tracker
+  pool: 5
+
+test:
+  adapter: sqlite3
+  database: ./db/sqlite/tracker-test
   pool: 5
