--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,9 @@ Style/Documentation:
 
 Metrics/LineLength:
   Max: 100
+
+Style/TrailingCommaInArrayLiteral:
+    EnforcedStyleForMultiline: consistent_comma
+
+Style/TrailingCommaInHashLiteral:
+    EnforcedStyleForMultiline: consistent_comma
