--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,3 +14,21 @@ Style/TrailingCommaInArrayLiteral:
 
 Style/TrailingCommaInHashLiteral:
     EnforcedStyleForMultiline: consistent_comma
+
+Metrics/BlockLength:
+  Max: 10
+  ExcludedMethods:
+    - before
+    - context
+    - create_table
+    - define
+    - describe
+    - factory
+    - group
+    - included
+    - it
+    - let
+    - namespace
+    - shared_context
+    - shared_examples_for
+    - task
